# heat_solver

./: .gitignore  CMakeLists.txt  experiment.py  main.cpp  process.py
scripts/: error.py  sanity.py
src/: CMakeLists.txt
src/init_conds/: CMakeLists.txt  init_conds.cpp
src/init_conds/include/: init_conds.hpp
src/solvers/: CMakeLists.txt  solver.cpp  time_step.cpp
src/solvers/include/: solver.hpp  time_step.hpp
